# PDF-Manager

./: .gitignore  .version-updater.js  .versionrc.json  CHANGELOG.md  GEMINI.md  LICENSE  README.md  index.html  package-lock.json  package.json
.github/workflows/: deploy-docs.yml  homebrew.yml  release.yml  test.yml
docs/: index.md
docs/.vitepress/: config.mts
docs/.vitepress/theme/: custom.css
docs/guide/: ai-ollama.md  features.md  getting-started.md  knowledge-graph.md  local-first.md  pdf-tools.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs
src-tauri/src/pdf/: annotation_reader.rs  annotations.rs  briefing.rs  compare.rs  convert.rs  editor.rs  extractor.rs  forensic_redact.rs  forms.rs  image_to_pdf.rs  merger.rs  metadata.rs  mod.rs  outline.rs  parser.rs  rasterizer.rs  remover.rs  reorder.rs  rotator.rs  sanitize.rs  security_utils.rs  signatures.rs  splitter.rs  templates.rs  test_utils.rs  utils.rs  watcher.rs  watermark.rs
src/ui/: package-lock.json  package.json  playwright.config.ts  svelte.config.js  vite.config.ts  vitest.config.ts
src/ui/playwright-report/: index.html
src/ui/src/: app.css
src/ui/src/lib/: stores.ts  utils.ts
src/ui/src/lib/components/: AnnotatePane.svelte  CommandPalette.svelte  ComparePane.svelte  CompressionPane.svelte  ExtractPane.svelte  FormsPane.svelte  InsightPane.svelte  KnowledgeGraph.svelte  LibraryPane.svelte  MergePane.svelte  NotepadPane.svelte  OnboardingTour.svelte  OrganizePane.svelte  PdfViewer.svelte  SecurityPane.svelte  SettingsPane.svelte  ShortcutsModal.svelte  SidebarNav.svelte  SignaturePane.svelte  SplitPane.svelte  StatusDisplay.svelte  ToolPane.svelte  (+2 more)
src/ui/src/routes/: +layout.svelte  +page.svelte
src/ui/src/test/: setup.ts
src/ui/tests/: basic.spec.ts
src/ui/tests/e2e/: annotations.spec.ts  basic.spec.ts  e2e_flows.spec.ts  forms.spec.ts  scenarios.spec.ts
(+8 files in other folders)
