[package]
name = "pdf-manager"
version = "1.0.0"
description = "Efficient cross-platform PDF manager built with Rust and Tauri."
authors = ["Prashant Bansal"]
edition = "2021"

[lib]
name = "pdf_manager"
path = "src/lib.rs"
crate-type = ["lib", "staticlib", "cdylib"]

[[bin]]
name = "pdf-manager"
path = "src/main.rs"

[dependencies]
uuid = { version = "1.8", features = ["v4"] }
tauri = { version = "2.2", features = [] }

serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["sync"] }
serde_json = "1.0"
lopdf = "0.34.0"
image = "0.25"
printpdf = "0.7"
sha2 = "0.10"
notify = "6.1"
regex = "1.10"
notify-rust = "=4.5.10"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-os = "2"
tauri-plugin-opener = "2"
openssl = { version = "0.10", features = ["vendored"] }
chrono = { version = "0.4", features = ["clock"] }
hex = "0.4"
pdf-extract = "0.10.0"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
tempfile = "3.10"
